--- a/pom.xml
+++ b/pom.xml
@@ -5,8 +5,8 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>3.0.4</version>
-		<relativePath/> <!-- lookup parent from repository -->
+		<version>2.7.9</version>
+		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.jaimecorg</groupId>
 	<artifactId>facultad</artifactId>
@@ -39,6 +39,10 @@
 		<dependency>    
 			<groupId>org.springframework.boot</groupId>    
 			<artifactId>spring-boot-starter-security</artifactId>    
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
 	</dependencies>
 
