--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,17 @@
 
+server.port=9090
+server.servlet.contextPath=/facultad
+
+spring.datasource.url=jdbc:mysql://localhost:3306/facultad
+spring.datasource.username=facultad
+spring.datasource.password=Facultad*1234
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+spring.jpa.properties.hibernate.default_schema=facultad
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.generate_statistics=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+
+url.autenticacion.rest.service=http://localhost:8080/autenticacion/
